--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,107 @@
-<h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me - Amit Sharma</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        header {
+            background: #35424a;
+            color: #ffffff;
+            padding-top: 30px;
+            min-height: 70px;
+            border-bottom: #e8491d 3px solid;
+        }
+        header a {
+            color: #ffffff;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 16px;
+        }
+        header ul {
+            padding: 0;
+            list-style: none;
+        }
+        header li {
+            display: inline;
+            padding: 0 20px 0 20px;
+        }
+        .main-content {
+            padding: 20px;
+            background: #ffffff;
+            margin-top: 20px;
+        }
+        .main-content img {
+            float: left;
+            margin-right: 20px;
+            border-radius: 50%;
+        }
+        .skills {
+            margin-top: 20px;
+        }
+        .contact-info {
+            background: #354a3d;
+            color: #ffffff;
+            padding: 20px;
+            margin-top: 20px;
+        }
+        .contact-info h3 {
+            margin-top: 0;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #35424a;
+            color: #ffffff;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>About Me</h1>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </header>
+    <div class="container">
+        <div class="main-content">
+            <img src="../assets/images/Amit.JPG" alt="Profile Picture" width="150">
+            <h2>Amit Sharma</h2>
+            <p>Hello! I'm Amit Sharma, an accomplished Business Analyst with over 13 years of hands-on experience spanning across CMS, OMS, WMS, POS, Retail & E-Commerce, and FMCG domains.</p>
+            <p>🎓 I hold a post-graduation degree from IIM Nagpur in Data Science for Business Excellence and Innovation, which has equipped me with advanced skills in leveraging data analytics to drive strategic decision-making and foster innovation.</p>
+            <p>💼 Throughout my career, I have excelled in various areas including project and product management, team leadership, requirement gathering and documentation, as well as orchestrating effective Scrum activities in Agile environments.</p>
+            <p>✨ With a keen eye for detail and a passion for delivering results, I specialize in seamlessly integrating technology solutions to optimize business processes and drive sustainable growth.</p>
+            <p>🤝 Let's connect to explore how my extensive expertise can contribute to your organization's success and drive forward-thinking solutions in today's dynamic business landscape.</p>
+        </div>
+        <div class="contact-info">
+            <h3>Contact Information</h3>
+            <p>Email: mramit.it@gmail.com</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/mramit-sharma/" style="color: #ffffff;">linkedin.com/in/amit-sharma</a></p>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2024 Amit Sharma. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+```
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
-
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+This HTML page includes sections for a profile picture, an introduction, detailed information about Amit Sharma's background, and contact information. You can further customize the styling and content as needed.
